[package]
name = "umask"
version = "0.1.5"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/umask"
description = "utility to deal with unix access mode"
edition = "2018"
keywords = ["unix", "umask", "permission", "mode"]
license = "MIT"
categories = []
readme = "README.md"

[dependencies]
